fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -32,7 +32,7 @@
 /* If mobile device, lock screen */
 @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
   html {
-    transform: rotate(-90deg);
+    /*transform: rotate(-90deg);*/
     transform-origin: left top;
     width: 100vh;
     overflow-x: hidden;
@@ -84,7 +84,7 @@ a {
 }
 
 .btn {
-  display: flex;
+  display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
